deployment.yaml
apiVersion:                                      extensions/v1beta1
kind:                                            Deployment
metadata:
  name:                                          walterspieler
spec:
  replicas:                                      2
  template:
    metadata:
      labels:
        app:                                     walterspieler
    spec:
      containers:
      - name:                                    walterspieler
        image:                                   gcr.io/matt-walters/walterspieler.com:v0.1.0
        ports:
        - containerPort:                         443
---
apiVersion:                                      v1
kind:                                            Service
metadata:
  name:                                          walterspieler-svc
  labels:
    app:                                         walterspieler
spec:
  type:                                          NodePort
  ports:
  - port:                                        80
    targetPort:                                  443
  selector:
    app:                                         walterspieler
---
apiVersion:                                      extensions/v1beta1
kind:                                            Ingress
metadata:
  name:                                          basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: walterspieler-ip
    kubernetes.io/ingress.allow-http:            "false"
spec:
  rules:
    - host:                                      walterspieler.com
      http:
        paths:
        - backend:
            serviceName:                         walterspieler-svc
            servicePort:                         80
    - host:                                      www.walterspieler.com
      http:
        paths:
        - backend:
            serviceName:                         walterspieler-svc
            servicePort:                         80
  tls:
    - secretName: tls-secret
